--- a/example.com.conf
+++ b/example.com.conf
@@ -2,6 +2,8 @@ upstream back.example.com  {
 
     # list of backend servers
     server backend1.local;
+    server backend2.local;
+    server backend3.local;
 
     # sticky session on
     session_sticky;
