--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 user  nginx;
 # This number should be, at maximum, the number of CPU cores on your system. 
-worker_processes 2;
+worker_processes auto;
 
 error_log  /var/log/nginx/error.log error;
 pid        /var/run/nginx.pid;
