--- a/nginx.conf
+++ b/nginx.conf
@@ -33,6 +33,10 @@ http {
     keepalive_timeout 30;
     # Number of requests a client can make over the keep-alive connection.
     keepalive_requests 30;
+    
+    vhost_traffic_status_zone;
+    vhost_traffic_status_filter_by_host on;
+
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
